<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher"
    tools:context="com.arielado.jogodamemoria.Banco"
    android:orientation="vertical" >
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:text="@string/ranking" />

    <TableLayout
        android:id="@+id/tbTabela"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="0,2" >
        
         <TableRow android:id="@+id/tbTitulo" android:layout_width="fill_parent" android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:padding="5dp"
                        android:text="@string/nome" >
 					</TextView>
                    
                    <TextView 
                        android:padding="5dp"
                        android:id="@+id/textView2" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:text="@string/pontos" >     
                    </TextView>
                    
                    <TextView android:padding="5dp" 
                        android:id="@+id/textView3" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"  
                        android:text="@string/erros" >
                    </TextView>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium" 
                        android:padding="5dp"
                        android:text="@string/tempo" >
                    </TextView>

         </TableRow>
         
         

   </TableLayout>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText" />   
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/botaoSair"
        android:onClick="finalizarRanking"
        android:text="@string/sair" />
        
	    

</LinearLayout>
