<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.arielado.jogodamemoria.MainMenuFragment" >
	
      <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1" >
	 		
	 		<TextView
        		android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
    	    	android:layout_gravity="center_horizontal"
        		android:textSize="50sp"
        		android:text="@string/menu" />
	
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="3"
	    android:orientation="vertical" >
	    
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/botaoJogar"
	        android:textAppearance="@android:style/TextAppearance.Holo.Widget.EditText" 
	        android:text="@string/jogar" />
	    
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/botaoOpcoes"
	        android:textAppearance="@android:style/TextAppearance.Holo.Widget.EditText"
	        android:text="@string/opcoes" />
	    
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/botaoRanking"
	        android:textAppearance="@android:style/TextAppearance.Holo.Widget.EditText"
	        android:text="@string/ranking" />	  
	</LinearLayout>

    	
</LinearLayout>
