<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher"
    android:orientation="vertical"
	android:id="@+id/mainLayout"
    tools:context="com.arielado.jogodamemoria.GameActivity" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:text="@string/jogo_iniciado" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:id="@+id/tvTempo"
        android:text="" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:gravity="center_horizontal"
		android:id="@+id/buttonLayout"
        android:orientation="vertical" >

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/botao_1"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />

        <Button
            android:id="@+id/botao_2"
            android:layout_width="54dp"
            android:layout_height="wrap_content" 
            android:onClick="iniciarBotoesJogo" />

        <Button
            android:id="@+id/botao_3"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />

        <Button
            android:id="@+id/botao_4"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_5"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
         <Button
             android:id="@+id/botao_6"
             android:layout_width="54dp"
             android:layout_height="wrap_content"
             android:onClick="iniciarBotoesJogo" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/botao_7"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />

        <Button
            android:id="@+id/botao_8"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />

        <Button
            android:id="@+id/botao_9"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_10"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_11"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_12"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
               
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

 		<Button
            android:id="@+id/botao_13"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />

        <Button
            android:id="@+id/botao_14"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />

        <Button
            android:id="@+id/botao_15"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_16"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_17"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_18"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

 		<Button
            android:id="@+id/botao_19"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />

        <Button
            android:id="@+id/botao_20"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />

        <Button
            android:id="@+id/botao_21"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_22"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_23"
            android:layout_width="54dp"
            android:layout_height="wrap_content" 
            android:onClick="iniciarBotoesJogo" />
        
        <Button
            android:id="@+id/botao_24"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:onClick="iniciarBotoesJogo" />
    </LinearLayout>-->
    
    </LinearLayout>
    
   <TableLayout 
       	android:layout_width="match_parent"
       	android:layout_height="0dp"
       	android:layout_weight="0.5"
       	android:stretchColumns="0,2" >
       		
       		<TableRow
       		    android:layout_width="wrap_content"
       		    android:layout_height="wrap_content" >
       		
           <TextView 
           		android:layout_width="wrap_content"
           		android:layout_height="wrap_content"         		
           		android:layout_gravity="left" 
           		android:text="@string/restantes" 
           		android:id="@+id/tvAcertos"
           		android:textColor="#228B22"
           		android:textSize="24sp" />
           
           
           
           
           <TextView 
           	   	android:layout_width="wrap_content"
               	android:layout_height="wrap_content"
             	android:layout_gravity="right" 
           	 	android:text="@string/erros" 
          	 	android:id="@+id/tvErros"
             	android:textColor="#FF0000"
           	 	android:textSize="24sp" />
           
           </TableRow>
       
   </TableLayout>       
  
</LinearLayout>
    
    

